# website_ai-knowledge

./: .bandit  .coveragerc  .env.act  .gitignore  .input  .port-allocation.json  .pre-commit-config.yaml  .secrets.example  .secrets.real  ARCHITECTURE.md  CI_CD_PHASE1_IMPLEMENTATION.md  CI_CD_README.md  CI_CD_TEST_FIXES.md  CLAUDE.md  MARKDOWN_QUALITY_SYSTEM.md  Makefile  NEXT_STEPS.md  README.md  act-installation.sh  bandit-report.json  codecov.yml  coverage.config.js  fix_markdown_linting.py  pyproject.toml  pytest.ini  run_tests.sh  safety-report.json  semgrep-results.json  test-analysis.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-content-issue.yml  04-performance-issue.yml  05-security-issue.yml  config.yml
.github/workflows/: act-compatible-test.yml  cache-config.yml  ci.yml  content-pipeline.yml  dependency-update.yml  dependency-update.yml.broken  deploy-github-pages.yml  deploy.yml  markdown-quality.yml  quality-gates.yml  security.yml  test-and-coverage-enhanced.yml  test-and-coverage-fixed.yml  test-and-coverage.yml
.security/: compliance_matrix.md  incident_playbook.md  privacy_policy.md  security_policy.md
act-services/: docker-compose.yml
act-services/init-scripts/: 01-init-test-db.sql
apps/site/: .markdownlint.json  .npmrc  astro.config.mjs  jest.config.js  package-lock.json  package.json  playwright-results.json  playwright-results.xml  playwright.config.js  security.config.js  tsconfig.json  vitest.config.js
configs/: .actrc  .bandit  .coveragerc  README.md
docs/: ACT_DEVELOPER_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE_VALIDATION_REPORT.md  CODE_STANDARDS.md  CONTRIBUTING.md  DATABASE_OPTIONS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  MONITORING_GUIDE.md  SECRETS_CONFIGURATION.md  SECURITY_OVERVIEW.md  SUPABASE_CONNECTION_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
docs/adrs/: 001-content-pipeline-architecture.md  002-duplicate-detection-strategy.md  005-workflow-orchestration.md  README.md
docs/ci-cd/: README.md
pipelines/: .env.example  README.md  __init__.py  config.py  exceptions.py  logging_config.py  monitoring.py  requirements-ai.txt  requirements-ci-new.txt  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements.txt  run_graph.py
pipelines/database/: __init__.py  connection.py  models.py
pipelines/dedup/: __init__.py  lsh_index.py  simhash.py
quality-control-configs/: .markdown-link-check.json  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .vale.ini  ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_GUIDE.md
scripts/: batch_content_migration.py  check_content_freshness.py  deploy.sh  fix-github-pages-links.sh  fix_bandit_issues.py  fix_flake8_issues.py  fix_markdown_violations.py  generate-analysis-summary.py  health-check.js  init_database.py  install-dependencies-improved.sh  install-dependencies.sh  integration_tests.py  link_checker.py  markdown_quality_fixer.py  markdown_quality_hook.py  migrate_current_violations.py  performance_test.py  port-allocator.js  pre-commit-link-check.sh  quality_dashboard.py  requirements.txt  run-tests.sh  setup-real-secrets.sh  setup_quality_system.sh  validate_content.py  validate_frontmatter_hook.py
security/: __init__.py  auth_middleware.py  compliance_checker.py  content_sanitizer.py  copyright_patterns.yaml  incident_response.py  input_validator.py  requirements.txt  secrets_manager.py  security_headers.py  security_monitor.py
temp-articles/: choosing-right-ml-algorithm.md  getting-started-with-ai.md  practical-prompt-engineering.md  transformer-revolution.md  understanding-neural-networks.md
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt
(+107 files in other folders)
